STARCH-606 component impelmentation checkpoint, most validation checks covered, loads modular component, unstable work in progress